# codora-web

./: Cargo.toml  Dockerfile  README.md  compose.yaml  rustfmt.toml
.github/workflows/: doc.yml
crates/codora-security/: Cargo.toml
crates/codora-security/src/: lib.rs
crates/codora-security/src/authentication/: claim.rs  mod.rs
crates/codora-security/src/authentication/handler/: mod.rs
crates/codora-security/src/authentication/handler/cookie/: mod.rs
crates/codora-security/src/domain/value/: mod.rs  username.rs
crates/codora-security/src/identity/: mod.rs
crates/codora-security/src/identity/emails/: mod.rs
crates/codora-security/src/identity/users/: mod.rs
crates/codora-web/: Cargo.toml
crates/codora-web/src/: lib.rs
