[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ship Rust application faster than you could ever"
readme = "README.md"
homepage = "https://github.com/codetheproject/codora-web"
documentation = "https://docs.rs/codora"
repository = "https://github.com/codetheproject/codora-web"
keywords = ["web", "security"]
categories = ["web-programming"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]

[workspace.dependencies]
codora-security = { path = "./crates/codora-security" }
codora-foundation = { git = "https://github.com/codetheproject/codora-foundation.git" }
tracing-subscriber = "0.3.19"
tokio = "1.46.1"
tracing = "0.1.41"
axum = "0.8.4"
axum-core = "0.5.2"
anyhow = "1.0.98"
tower = "0.5.2"
uuid = "1.17.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
derive_more = "2.0.1"

[workspace.lints]
