[package]
name = "codora-security"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Authentication and Authorization library written in rust"
repository = { workspace = true }
keywords = ["authentication", "authorization"]
categories = ["web-programming", "authentication"]
authors = { workspace = true }


[features]
# axum = ["dep:tower-layer", "dep:tower-service"]

[dependencies]
futures-util = "0.3.31"
http = "1.3.1"
tower-layer = { version = "0.3.3" }
tower-service = { version = "0.3.3" }
tracing = { workspace = true, features = ["async-await", "log-always"] }
codora-foundation = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }


[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1.3"
hyper-util = "0.1.14"
mime = "0.3.17"
tower-http = "0.6.6"

[lints]
workspace = true
